--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="txt_start_los_gehts">Los geht\'s</string>
 
     <!-- Starte Parcour -->
-    <string name="txt_parcour_jetzt_geht_es_los">Jetzt geht es los…</string>
+    <string name="txt_parcour_jetzt_geht_es_los">Jetzt geht es los...</string>
 
     <!-- Einstellungen -->
     <string name="txt_einstell_email_senden_an">E-Mail senden an</string>
